--- a/server/public/index.html
+++ b/server/public/index.html
@@ -8,8 +8,12 @@
   </head>
   <body>
     <h1>Book Shelf</h1>
+
     <input id="newBookTitle" placeholder="Title">
     <input id="newBookAuthor" placeholder="Author">
+    <input id="newBookEdition" placeholder="Edition">
+    <input id="newBookPublisher" placeholder="Publisher">
+
     <button id="newBookButton">Click here to add the book!</button>
     <ul id="bookShelf">
     </ul>
